--- a/OrdersService/requirements.txt
+++ b/OrdersService/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.115.12
 uvicorn[standard]==0.23.2
-sqlalchemy==2.0.40
+sqlalchemy>=1.4.0
 psycopg2-binary==2.9.9
 httpx==0.27.0
 python-multipart==0.0.6
