add schemas and update db name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,15 +5,16 @@ services:
     image: postgres:14
     container_name: postgres
     environment:
-      POSTGRES_USER: orders_user
-      POSTGRES_PASSWORD: orders_pass
-      POSTGRES_DB: orders
+      POSTGRES_USER: online_shop_db_user
+      POSTGRES_PASSWORD: online_shop_db_pass
+      POSTGRES_DB: online_shop_db
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5433:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U orders_user -d orders"]
+      test: ["CMD-SHELL", "pg_isready -U online_shop_db_user -d online_shop_db"]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -42,7 +43,7 @@ services:
       rabbitmq:
         condition: service_healthy
     environment:
-      DATABASE_URL: postgresql+asyncpg://orders_user:orders_pass@postgres:5432/orders
+      DATABASE_URL: postgresql+asyncpg://online_shop_db_user:online_shop_db_pass@postgres:5432/online_shop_db
       RABBITMQ_URL: amqp://guest:guest@rabbitmq/
       PYTHONUNBUFFERED: 1
 
@@ -69,7 +70,7 @@ services:
       rabbitmq:
         condition: service_healthy
     environment:
-      DATABASE_URL: postgresql+asyncpg://orders_user:orders_pass@postgres:5432/orders  # Подключение к БД для payments
+      DATABASE_URL: postgresql+asyncpg://online_shop_db_user:online_shop_db_pass@postgres:5432/online_shop_db
       RABBITMQ_URL: amqp://guest:guest@rabbitmq/  # Подключение к RabbitMQ
       PYTHONUNBUFFERED: 1
 
